--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="bg-info">
+    <header class="bg-info" style=" position: fixed; width: 100%; z-index: 1;">
         <div class="row text-white">
             <div class="col-md-6 col-9 p-3 ps-5">
                 <h2>The Pep Cola</h2>
             </div>
             <div class="col-md-6 col-3">
-                <nav class="navbar navbar-expand-lg navbar-light p-4 "> 
+                <nav class="navbar navbar-expand-lg navbar-light p-2 "> 
                     <div class="container-fluid">
                       <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -24,16 +24,16 @@
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                           <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active text-white" aria-current="page" href="#home-section">Home</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Services</a>
+                            <a class="nav-link text-white" href="#service-section">Services</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Experience</a>
+                            <a class="nav-link text-white" href="#experience-section">Experience</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Contact me</a>
+                            <a class="nav-link text-white" href="#contact-section">Contact me</a>
                           </li>
                         </ul>
                       </div>
@@ -43,7 +43,7 @@
         </div>
     </header>
 
-    <section class="p-4">
+    <section id="home-section" style="padding-top: 10em;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -64,7 +64,7 @@
         </div>
     </section>
 
-    <section class="bg-light p-5">
+    <section class="bg-light p-5" id="service-section">
       <div class="container">
         <h1 class="text-center">Services</h1>
         <div class="row">
@@ -136,7 +136,7 @@
       </div>
     </section>
 
-    <section class="bg-white p-5">
+    <section class="bg-white p-5" id="experience-section">
       <div class="container">
         <h1 class="text-center">Experiences</h1>
         <div class="row">
@@ -177,7 +177,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="contact-section">
 
       <div class="container">
         <h1 class="text-center">Contact me</h1>
@@ -212,6 +212,20 @@
       </div>
 
     </section>
+
+    <footer class="bg-info m-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center text-white">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+            
+            <p>Copyrights</p>
+        </div>
+        </div>
+      </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
